# uwbCart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  upd.sh
cartcpp/: CMakeLists.txt
cartcpp/inc/cart/: base.h  cart.h  sys.h  uwb_JL.h  uwb_s.h
cartcpp/src/app/: main.cpp
cartcpp/src/core/: cartCmd.cpp  drive.cpp  motors.cpp  nav.cpp  sys.cpp  sys_tcp.cpp  uwb_JL.cpp  uwb_s.cpp
cmds/: uwb_frms.txt
data/: embd
data/cartd/: uwb_cfg.json
doc/: esp_uwb_oled_out.md  mcu_notes.md  notes.md  ros2_notes.md  spec.md  uwb.md
doc/uwb/: uwb_notes.md
esp/: README.md
esp/uwbCart_esp/: CMakeLists.txt  README.md
esp/uwbCart_esp/main/: main.cpp
inc/cart/: cart.h
pcb/uwb_brd/: .gitignore  avv_sym_lib.kicad_sym  fp-lib-table  sym-lib-table  uwb_brd.kicad_pcb  uwb_brd.kicad_prl  uwb_brd.kicad_pro  uwb_brd.kicad_sch
pcb/uwb_brd/avv_fp_lib.pretty/: Con_XH_2P_SMD.kicad_mod  Con_XH_3P_SMD.kicad_mod  Con_XH_4P_SMD.kicad_mod  DC_24V_5V.kicad_mod  DC_24V_5V_EN.kicad_mod  EC06.kicad_mod  Esp32c3_SuperMini.kicad_mod  KF2024_2.54_SMD_2P.kicad_mod  KF2024_2.54_SMD_3P.kicad_mod  KF2024_2.54_SMD_4P.kicad_mod  OLED_SSD1306.kicad_mod  dc55_21.kicad_mod  sw_kcd1.kicad_mod  sw_kcd3.kicad_mod
ros/: build.sh  env.sh  run.sh
ros/pkgs/uwbcart_ros/: CMakeLists.txt  package.xml
ros/pkgs/uwbcart_ros/launch/: bot_tinyroom.launch  joy_ctrl.launch
ros2/: build.sh  cart_node_cmd.sh  clean.sh  env.sh  init.sh  readme.md  ros2_notes.md  run.sh  steer.sh
ros2/pkgs/uwbcart_ros/: CMakeLists.txt  dep  package.xml
ros2/test/: visualize_lidar.sdf
src/app/: cartApp.cpp  main.cpp
src/core/: nav.cpp  uwb.cpp
test/arduino/Blink1/: Blink1.ino
test/esp32/esp32_Blink_1/: esp32_Blink_1.ino
test/oled/SH1106_128x64_t1/: SH1106_128x64_t1.ino
test/oled/simple_demo/: simple_demo.ino
test/oled/u8g2_t1/: u8g2_t1.ino
test/rp2040/Blink/: Blink.ino
test/rp2040/basic/: basic.ino
test/rp2040/gpio_t1/: gpio_t1.ino
test/rp2040/neoPixel/: neoPixel.ino
test/uwb/BasicReceiver1/: BasicReceiver1.ino
test/uwb/BasicSender1/: BasicSender1.ino
(+40 files in other folders)
